# Exemples

./: .gitignore  README.md  Roadmap.md  s
Data_Structure/: package.json
Next/: package.json
software arquiteture/DDD/python_example/simple_ecommerce/: README.md  main.py  pyproject.toml  requirements.txt
software arquiteture/DDD/python_example/simple_ecommerce/docs/diary/: current_diary.md  prompts.md
software arquiteture/DDD/python_example/simple_ecommerce/src/api/: CITATIONS.md  deps.py
software arquiteture/DDD/python_example/simple_ecommerce/src/api/mappers/: product_mapper.py
software arquiteture/DDD/python_example/simple_ecommerce/src/api/routes/: products.py
software arquiteture/DDD/python_example/simple_ecommerce/src/api/schemas/: products.py
software arquiteture/DDD/python_example/simple_ecommerce/src/application/services/: change_product_price_service.py  delete_product_service.py  get_product_service.py  list_products_service.py  register_product_service.py  rename_product_service.py
software arquiteture/DDD/python_example/simple_ecommerce/src/domain/catalog/: errors.py
software arquiteture/DDD/python_example/simple_ecommerce/src/domain/shared/: entities.py  errors.py  specifications.py  value_objects.py
software arquiteture/DDD/python_example/simple_ecommerce/src/infrastructure/: CITATION.md
software arquiteture/DDD/python_example/simple_ecommerce/src/infrastructure/db/: config.py  data_mapper.py  database.py  specification_visitor.py
software arquiteture/DDD/python_example/simple_ecommerce/tests/: conftest.py  utils.py
(+125 files in other folders)
