[project]
name = "simple-ecommerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "black>=25.9.0",
    "coverage>=7.10.7",
    "cryptography>=46.0.1",
    "factory-boy>=3.3.3",
    "fastapi>=0.118.0",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "mypy>=1.18.2",
    "orjson>=3.11.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "ruff>=0.13.3",
    "sqlalchemy>=1.4",
    "sqlmodel>=0.0.25",
    "uvicorn[standard]>=0.37.0",
]
